# diversity-inclusion-metrics-subset-selection

./: README.md  pyproject.toml
.github/workflows/: main.yml
src/: diversity_inclusion_metrics.py
tests/: test_worked_example.py
